--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "dotwatcher-stream",
   "version": "1.0.0",
   "description": "Pusher endpoint that get poked when new content is published",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "Jon Heslop",
+  "repository": "git@github.com:dotwatcher/dotwatcher-stream.git",
+  "author": "Jon Heslop <jon@jonheslop.com>",
   "license": "MIT",
+  "main": "api/new-post.js",
+  "scripts": {},
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
     "pusher": "^2.1.3"
   },
-  "devDependencies": {
-    "now-env": "^3.1.0"
-  }
+  "devDependencies": {}
 }
